<resources>
    <string name="app_name">Covid19 App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Corona Virus</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_article">Article</string>
    <string name="menu_news">News</string>
    <string name="menu_symptoms">Symptoms</string>
    <string name="menu_help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>