<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="uz.kozimjon.covid19app.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_fragment_detail"
            app:destination="@id/fragment_detail" />
        <action
            android:id="@+id/action_nav_home_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="uz.kozimjon.covid19app.ui.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_article"
        android:name="uz.kozimjon.covid19app.ui.ArticleFragment"
        android:label="@string/menu_article"
        tools:layout="@layout/fragment_article" >
        <action
            android:id="@+id/action_nav_article_to_fragment_detail"
            app:destination="@id/fragment_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_news"
        android:name="uz.kozimjon.covid19app.ui.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_symptoms"
        android:name="uz.kozimjon.covid19app.ui.SymptomsFragment"
        android:label="@string/menu_symptoms"
        tools:layout="@layout/fragment_symptoms" />

    <fragment
        android:id="@+id/nav_help"
        android:name="uz.kozimjon.covid19app.ui.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/fragment_detail"
        android:name="uz.kozimjon.covid19app.ui.DetailFragment"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="name"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="author"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="image"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="desc"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="content"
            app:argType="string"
            app:nullable="true" />


    </fragment>
    <fragment
        android:id="@+id/startFragment"
        android:name="uz.kozimjon.covid19app.ui.StartFragment"
        android:label="fragment_start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>